<resources>
    <string name="app_name">ToDo task</string>
    <string name="date">Thursday 03 April</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="date_1">Date</string>
    <string name="hash_tag">Hash tag</string>
    <string name="crucial">Crucial</string>
    <string name="important">Important</string>
    <string name="free">Free</string>
    <string name="create">Create!</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="timer">Timer</string>
    <string name="tasks_progress">Tasks Progress</string>
    <string name="_78">78%</string>
    <string name="add">Add</string>
    <string name="menu">menu</string>
    <string name="task_manager">Task Manager</string>
    <string name="you_have_5_tasks_for_today">You have 5 tasks for today</string>
    <string name="update">Update</string>
    <string name="back_button">BackButton</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="urgency">Urgency</string>
    <string name="all_tasks">All Tasks</string>
    <string name="done">Done</string>
    <string name="history_tasks">History tasks</string>
    <string name="close">Close</string>
    <string name="restart">Restoration</string>
    <string name="clone">Clone</string>
    <string name="back">back</string>
    <string name="next">Next</string>
    <string name="launch">Launch</string>
    <string name="how_to_use">How to use</string>
    <string name="tasks_done">Tasks done</string>
    <string name="settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="save">Save</string>
</resources>
