<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#FFF"
    android:paddingBottom="8dp"
    tools:context=".ui.screens.AddTaskActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />

    <androidx.cardview.widget.CardView
        android:id="@+id/urgencyImageCard"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:animateLayoutChanges="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/urgencyImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFF"
            android:scaleType="centerCrop"
            android:src="@drawable/free_top_back" />

        <TextView
            android:id="@+id/textAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:lines="1"
            android:text="@string/add_task"
            android:textColor="#FFF"
            android:textSize="28sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/taskActivityTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/title"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/lineLeft"
        app:layout_constraintRight_toLeftOf="@id/lineRight"
        app:layout_constraintTop_toBottomOf="@id/urgencyImageCard" />


    <EditText
        android:id="@+id/taskActivityDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/date_1"
        android:inputType="none"
        android:longClickable="false"
        android:paddingLeft="8dp"
        android:paddingTop="10dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp"
        android:textColor="#000"
        android:textColorHint="#777777"
        app:layout_constraintLeft_toLeftOf="@id/taskActivityTitle"
        app:layout_constraintRight_toLeftOf="@id/line_between_time"
        app:layout_constraintTop_toBottomOf="@id/taskActivityTitle"
        tools:ignore="TextFields" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/line_between_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <EditText
        android:id="@+id/taskActivityTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:hint="@string/time"
        android:inputType="none"
        android:longClickable="false"
        android:paddingLeft="8dp"
        android:paddingTop="10dp"
        android:paddingRight="8dp"
        android:paddingBottom="10dp"
        android:textColor="#000"
        android:textColorHint="#777777"
        app:layout_constraintLeft_toRightOf="@id/line_between_time"
        app:layout_constraintRight_toRightOf="@id/taskActivityTitle"
        app:layout_constraintTop_toBottomOf="@id/taskActivityTitle"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/taskActivityHashTag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hash_tag"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/taskActivityTitle"
        app:layout_constraintRight_toRightOf="@id/taskActivityTitle"
        app:layout_constraintTop_toBottomOf="@id/taskActivityDate" />

    <EditText
        android:id="@+id/taskActivityText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/back_dialog_text"
        android:gravity="top"
        android:hint="Write down details"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="#000"
        android:textColorHint="#777777"
        app:layout_constraintBottom_toTopOf="@id/temp3"
        app:layout_constraintLeft_toLeftOf="@id/taskActivityTitle"
        app:layout_constraintRight_toRightOf="@id/taskActivityTitle"
        app:layout_constraintTop_toBottomOf="@id/taskActivityHashTag" />

    <TextView
        android:id="@+id/temp_urgency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:drawableEnd="@drawable/ic_siren"
        android:drawableRight="@drawable/ic_siren"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/urgency"
        android:textColor="#010065"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/temp3"
        app:layout_constraintLeft_toLeftOf="@id/taskActivityTitle"
        app:layout_constraintTop_toTopOf="@id/temp3" />

    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:id="@+id/temp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/taskActivityClose"
        app:layout_constraintLeft_toRightOf="@id/temp_urgency"
        app:layout_constraintRight_toRightOf="@id/taskActivityTitle">

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/taskActivityCrucial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crucial"
            android:textColor="#029604"
            app:tbgMarkerColor="#C5190D" />

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/taskActivityImportant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:text="@string/important"
            android:textColor="#00FFF7"
            app:tbgMarkerColor="#1C43A0" />

        <com.nex3z.togglebuttongroup.button.LabelToggle
            android:id="@+id/taskActivityFree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/free"
            android:textColor="#C5190D"
            app:tbgMarkerColor="#029604" />

    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

    <Button
        android:id="@+id/taskActivityCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_create_back"
        android:drawableEnd="@drawable/ic_create"
        android:drawableRight="@drawable/ic_create"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/create"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/taskActivityClose"
        app:layout_constraintRight_toRightOf="@id/taskActivityTitle" />

    <Button
        android:id="@+id/taskActivityUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_create_back"
        android:drawableEnd="@drawable/ic_create"
        android:drawableRight="@drawable/ic_create"
        android:visibility="gone"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/update"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/taskActivityClose"
        app:layout_constraintRight_toRightOf="@id/taskActivityTitle" />

    <Button
        android:id="@+id/taskActivityClose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/button_cancel_back"
        android:drawablePadding="0dp"
        android:text="@string/cancel"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/taskActivityDone"
        app:layout_constraintRight_toLeftOf="@id/taskActivityCreate" />

    <Button
        android:id="@+id/taskActivityDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/button_dialog_done_back"
        android:drawablePadding="0dp"
        android:text="@string/done"
        android:textColor="#FFF"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/taskActivityCancel"
        app:layout_constraintRight_toLeftOf="@id/taskActivityClose" />


    <Button
        android:id="@+id/taskActivityCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/button_dialog_cancel_back"
        android:drawablePadding="0dp"
        android:text="@string/cancel"
        android:textColor="#FFF"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/taskActivityDelete"
        app:layout_constraintRight_toLeftOf="@id/taskActivityDone" />

    <Button
        android:id="@+id/taskActivityDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/button_dialog_delete_back"
        android:text="@string/delete"
        android:textColor="#FFF"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/taskActivityTitle"
        app:layout_constraintRight_toLeftOf="@id/taskActivityCancel" />


    <LinearLayout
        android:id="@+id/removeCLickItem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/taskActivityText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/removeCLickItem1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskActivityText" />

</androidx.constraintlayout.widget.ConstraintLayout>