<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:background="#FFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_manager"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/addTaskButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addTaskButton" />

    <ImageButton
        android:id="@+id/openMenuButtonMain"
        style="@style/Button.Action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@+id/addTaskButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addTaskButton" />

    <ImageButton
        android:id="@+id/addTaskButton"
        style="@style/Button.Action"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/add"
        android:padding="8dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/infoSection"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:cardBackgroundColor="#FFFFF5"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        android:animateLayoutChanges="true"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/addTaskButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:animateLayoutChanges="true">

            <com.mikhaellopez.circularprogressbar.CircularProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cpb_background_progressbar_color="#b6bbd8"
                app:cpb_background_progressbar_width="5dp"
                app:cpb_progress_direction="to_right"
                app:cpb_progressbar_color="#3f51b5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:cpb_progressbar_width="10dp"
                app:cpb_round_border="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tempText1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percentOfProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/_78"
                android:textColor="#290061"
                android:textSize="28sp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="@id/progress_circular"
                app:layout_constraintLeft_toLeftOf="@id/progress_circular"
                app:layout_constraintRight_toRightOf="@id/progress_circular"
                app:layout_constraintTop_toTopOf="@id/progress_circular" />

            <TextView
                android:id="@+id/tempText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tasks_progress"
                android:textColor="#000"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/proportionOfTasks"
                app:layout_constraintLeft_toRightOf="@id/progress_circular"
                app:layout_constraintRight_toLeftOf="@id/searchImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/proportionOfTasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tool:text="14/24"
                android:textColor="#0032BD"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/tempText1"
                app:layout_constraintTop_toBottomOf="@id/tempText1" />

            <TextView
                android:id="@+id/tempText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/tasks_done"
                app:layout_constraintBottom_toBottomOf="@id/proportionOfTasks"
                app:layout_constraintLeft_toRightOf="@id/proportionOfTasks"
                android:layout_marginStart="8dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/searchImage"
                android:src="@drawable/ic_statistics"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tempText1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/done" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tasksCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you_have_5_tasks_for_today"
        android:textColor="#000"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoSection" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tasksCountText"
        app:tabGravity="center"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="#FF0000"
        app:tabTextColor="#000000" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayoutMain" />


</androidx.constraintlayout.widget.ConstraintLayout>